--- a/spring23-team-1/code/import_data.ipynb
+++ b/spring23-team-1/code/import_data.ipynb
@@ -1,13 +1,39 @@
 {
  "cells": [
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Data\n",
+    "\n",
+    "Before running this notebook, be sure to follow these steps:\n",
+    "\n",
+    "1. Download the three datasets containing 311 data from 2010 to 2024 from https://dataverse.harvard.edu/dataset.xhtml?persistentId=doi:10.7910/DVN/CVKM87\n",
+    "\n",
+    "2. Download the Boston social vulnerability dataset from https://data.boston.gov/dataset/climate-ready-boston-social-vulnerability\n",
+    "\n",
+    "3. Place all four .csv files into the ``data`` folder\n",
+    "\n",
+    "4. If everything works correctly, you should see a pandas dataframe with 45 columns after the last cell, with the final column containing the Social Vulnerability Index we calculated"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Reads the three .csv files containing 311 data:"
    ]
   },
   {
@@ -31,12 +57,28 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Concatenates all three subsets into one large dataset:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
     "df = pd.concat([df1, df2, df3])"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Drops rows that do not contain the GEOID needed to match Boston Social Vulnerability data:"
    ]
   },
   {
@@ -49,12 +91,28 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Converts the GEOID from float to int:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
     "df[\"CT_ID_10\"] = df[\"CT_ID_10\"].astype(np.int64)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Reads the Social Vulnerability csv as pandas dataframe:"
    ]
   },
   {
@@ -67,6 +125,14 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Calculates the Social Vulnerability Index by adding all the socially vulnerable category populations and dividing by the total population:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 70,
    "metadata": {},
@@ -76,12 +142,28 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Since some citizens are present in more than one vulnerable group, we want to normalize this index from 0-1 by max-min normalization:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
     "sv_df[\"SV_IDX\"] = (sv_df[\"SV_IDX\"] - sv_df[\"SV_IDX\"].min()) / (sv_df[\"SV_IDX\"].max() - sv_df[\"SV_IDX\"].min())"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Sanity check:"
    ]
   },
   {
@@ -267,6 +349,14 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Joins the two datasets by the GEOID key:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 73,
    "metadata": {},
@@ -276,12 +366,28 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Since some 311 calls have GEOID not present in the Boston.gov dataset (likely typed in incorrectly), we remove those rows (~10k):"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
     "df.dropna(subset=[\"FID\"], inplace=True)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The final column should be the Social Vulnerability Index we calculated ranging from 0 to 1:"
    ]
   },
   {
