update deli 1 to save csv and update team info

--- a/spring23-team-1/code/deliverable_1.ipynb
+++ b/spring23-team-1/code/deliverable_1.ipynb
@@ -43,15 +43,15 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/steviewong/opt/anaconda3/lib/python3.9/site-packages/IPython/core/interactiveshell.py:3444: DtypeWarning: Columns (16,17) have mixed types.Specify dtype option on import or set low_memory=False.\n",
-      "  exec(code_obj, self.user_global_ns, self.user_ns)\n"
+      "C:\\Users\\ivanb\\AppData\\Local\\Temp\\ipykernel_20808\\2849313675.py:3: DtypeWarning: Columns (16,17) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "  df3 = pd.read_csv('../data/311 Cases 2020_2024 Unrestricted.csv')\n"
      ]
     }
    ],
    "source": [
-    "df1 = pd.read_csv('/Users/steviewong/Desktop/ds-councilor-mejia-analyzing-311-sp23-team-1/spring23-team-1/code/311 Cases 2010_2014 Unrestricted.csv')\n",
-    "df2 = pd.read_csv('/Users/steviewong/Desktop/ds-councilor-mejia-analyzing-311-sp23-team-1/spring23-team-1/code/311 Cases 2015_2019 Unrestricted.csv')\n",
-    "df3 = pd.read_csv('/Users/steviewong/Desktop/ds-councilor-mejia-analyzing-311-sp23-team-1/spring23-team-1/code/311 Cases 2020_2024 Unrestricted.csv')"
+    "df1 = pd.read_csv('../data/311 Cases 2010_2014 Unrestricted.csv')\n",
+    "df2 = pd.read_csv('../data/311 Cases 2015_2019 Unrestricted.csv')\n",
+    "df3 = pd.read_csv('../data/311 Cases 2020_2024 Unrestricted.csv')"
    ]
   },
   {
@@ -100,6 +100,23 @@
    "outputs": [],
    "source": [
     "df[\"CT_ID_10\"] = df[\"CT_ID_10\"].astype(np.int64)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Save the stacked dataframes:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.to_csv(\"../data/311_cases.csv\", index=False)"
    ]
   },
   {
