add heatmap for cases

--- a/spring23-team-1/code/checkpoint_b.ipynb
+++ b/spring23-team-1/code/checkpoint_b.ipynb
@@ -441,11 +441,60 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\ivanb\\AppData\\Local\\Temp\\ipykernel_14024\\871958569.py:1: DtypeWarning: Columns (16,17,28) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "  cases = pd.read_csv(\"../data/311_cases.csv\")\n"
+     ]
+    }
+   ],
+   "source": [
+    "cases = pd.read_csv(\"../data/311_cases.csv\")"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### HeatMap of Property Violations"
+    "### 1. HeatMaps"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0          42.362916\n",
+       "1          42.342110\n",
+       "2          42.362916\n",
+       "3          42.358318\n",
+       "4          42.351274\n",
+       "             ...    \n",
+       "2520675    42.300170\n",
+       "2520676    42.320491\n",
+       "2520677    42.349206\n",
+       "2520678    42.350122\n",
+       "2520679    42.321508\n",
+       "Name: Y, Length: 2520680, dtype: float64"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cases[\"Y\"]"
    ]
   },
   {
@@ -458,7 +507,8 @@
     "from folium.plugins import HeatMap\n",
     "\n",
     "boston_coordinates = [42.3601, -71.0589]\n",
-    "heatmap_map = folium.Map(location=boston_coordinates, zoom_start=12)"
+    "cases_heatmap_map = folium.Map(location=boston_coordinates, zoom_start=12)\n",
+    "violations_heatmap_map = folium.Map(location=boston_coordinates, zoom_start=12)"
    ]
   },
   {
@@ -468,21 +518,31 @@
    "outputs": [],
    "source": [
     "# Extract latitude and longitude coordinates as a list of lists\n",
-    "coordinates = violations[['latitude', 'longitude']].values.tolist()\n",
+    "violations_coordinates = violations[['latitude', 'longitude']].values.tolist()\n",
+    "cases_coordinates = cases[[\"Y\", \"X\"]].values.tolist()\n",
     "\n",
     "# Add the heatmap layer to the map\n",
-    "HeatMap(coordinates).add_to(heatmap_map)\n",
+    "HeatMap(violations_coordinates).add_to(violations_heatmap_map)\n",
+    "HeatMap(cases_coordinates).add_to(cases_heatmap_map)\n",
     "\n",
     "# Save the heatmap to an HTML file\n",
-    "heatmap_map.save('../output/heatmap.html')"
+    "violations_heatmap_map.save('../output/property_violations_heatmap.html')\n",
+    "cases_heatmap_map.save('../output/cases_heatmap.html')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 311 Calls vs Property Violations"
+    "### 2. 311 Calls vs Property Violations"
    ]
   },
   {
@@ -562,24 +622,6 @@
    "source": [
     "violations_by_geoid = violations.groupby(by=[\"GEOID10\"]).size().reset_index(name=\"NUM_VIOLATIONS\")\n",
     "violations_by_geoid.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\ivanb\\AppData\\Local\\Temp\\ipykernel_14024\\871958569.py:1: DtypeWarning: Columns (16,17,28) have mixed types. Specify dtype option on import or set low_memory=False.\n",
-      "  cases = pd.read_csv(\"../data/311_cases.csv\")\n"
-     ]
-    }
-   ],
-   "source": [
-    "cases = pd.read_csv(\"../data/311_cases.csv\")"
    ]
   },
   {
