--- a/spring23-team-1/code/checkpoint_b.ipynb
+++ b/spring23-team-1/code/checkpoint_b.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -431,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -442,14 +442,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\ivanb\\AppData\\Local\\Temp\\ipykernel_14024\\871958569.py:1: DtypeWarning: Columns (16,17,28) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "C:\\Users\\ivanb\\AppData\\Local\\Temp\\ipykernel_17312\\871958569.py:1: DtypeWarning: Columns (16,17,28) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  cases = pd.read_csv(\"../data/311_cases.csv\")\n"
      ]
     }
@@ -717,8 +717,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import folium\n",
+    "from folium.plugins import HeatMap\n",
     "import json\n",
     "\n",
+    "boston_coordinates = [42.3601, -71.0589]\n",
     "choropleth_311 = folium.Map(location=boston_coordinates, zoom_start=12)\n",
     "\n",
     "# Load GeoJSON data for regions\n",
@@ -726,7 +729,6 @@
     "\n",
     "# Data to visualize on the choropleth map (a dictionary with region ID as key and value as the data)\n",
     "data = {x[\"properties\"][\"GEOID10\"][-6:] : cases_by_geoid[cases_by_geoid[\"CT_ID_10\"] == int(x[\"properties\"][\"GEOID10\"])][\"NUM_CALLS\"].values[0] for x in regions_geojson[\"features\"]}\n",
-    "# data = {x[\"properties\"][\"GEOID10\"][-6:] : calls_svidx_df[calls_svidx_df[\"CT_ID_10\"] == int(x[\"properties\"][\"GEOID10\"])][\"CALLS_PER_POP\"].values[0] for x in regions_geojson[\"features\"]}\n",
     "\n",
     "folium.Choropleth(\n",
     "    geo_data=regions_geojson,\n",
@@ -744,11 +746,167 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Unnamed: 0</th>\n",
+       "      <th>CT_ID_10</th>\n",
+       "      <th>NUM_CALLS</th>\n",
+       "      <th>POP100_RE</th>\n",
+       "      <th>Name</th>\n",
+       "      <th>SV_IDX</th>\n",
+       "      <th>CALLS_PER_POP</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>25025000100</td>\n",
+       "      <td>18353</td>\n",
+       "      <td>4254</td>\n",
+       "      <td>Brighton</td>\n",
+       "      <td>0.302320</td>\n",
+       "      <td>4.314292</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>25025000201</td>\n",
+       "      <td>13992</td>\n",
+       "      <td>3854</td>\n",
+       "      <td>Brighton</td>\n",
+       "      <td>0.209524</td>\n",
+       "      <td>3.630514</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>25025000202</td>\n",
+       "      <td>13251</td>\n",
+       "      <td>3885</td>\n",
+       "      <td>Brighton</td>\n",
+       "      <td>0.398954</td>\n",
+       "      <td>3.410811</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>25025000301</td>\n",
+       "      <td>10379</td>\n",
+       "      <td>2740</td>\n",
+       "      <td>Brighton</td>\n",
+       "      <td>0.274417</td>\n",
+       "      <td>3.787956</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>25025000302</td>\n",
+       "      <td>10431</td>\n",
+       "      <td>3142</td>\n",
+       "      <td>Brighton</td>\n",
+       "      <td>0.319505</td>\n",
+       "      <td>3.319860</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Unnamed: 0     CT_ID_10  NUM_CALLS  POP100_RE      Name    SV_IDX  \\\n",
+       "0           0  25025000100      18353       4254  Brighton  0.302320   \n",
+       "1           1  25025000201      13992       3854  Brighton  0.209524   \n",
+       "2           2  25025000202      13251       3885  Brighton  0.398954   \n",
+       "3           3  25025000301      10379       2740  Brighton  0.274417   \n",
+       "4           4  25025000302      10431       3142  Brighton  0.319505   \n",
+       "\n",
+       "   CALLS_PER_POP  \n",
+       "0       4.314292  \n",
+       "1       3.630514  \n",
+       "2       3.410811  \n",
+       "3       3.787956  \n",
+       "4       3.319860  "
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "calls_svidx_df = pd.read_csv(\"../data/calls_svidx_df.csv\")\n",
+    "calls_svidx_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TODO: Let's to calls per capita"
+    "import folium\n",
+    "from folium.plugins import HeatMap\n",
+    "import json\n",
+    "\n",
+    "boston_coordinates = [42.3601, -71.0589]\n",
+    "choropleth_311 = folium.Map(location=boston_coordinates, zoom_start=12)\n",
+    "\n",
+    "# Load GeoJSON data for regions\n",
+    "regions_geojson = json.load(open('../data/Census_2010_Tracts.geojson', 'r'))\n",
+    "\n",
+    "# Data to visualize on the choropleth map (a dictionary with region ID as key and value as the data)\n",
+    "data = {}\n",
+    "for region in regions_geojson[\"features\"]:\n",
+    "    tractce10 = region[\"properties\"][\"GEOID10\"][-6:]\n",
+    "    calls_per_pop = calls_svidx_df[calls_svidx_df[\"CT_ID_10\"] == int(region[\"properties\"][\"GEOID10\"])][\"CALLS_PER_POP\"]\n",
+    "    if len(calls_per_pop) == 1 and calls_per_pop.values[0] < 150:\n",
+    "        data[tractce10] = calls_per_pop.values[0]\n",
+    "\n",
+    "bins = [0, 3, 5, 7, 10, 30, 70]\n",
+    "\n",
+    "folium.Choropleth(\n",
+    "    geo_data=regions_geojson,\n",
+    "    data=data,\n",
+    "    columns=['TRACTCE10', 'value'],\n",
+    "    key_on='feature.properties.TRACTCE10',\n",
+    "    fill_color='YlOrRd',\n",
+    "    fill_opacity=0.7,\n",
+    "    line_opacity=0.2,\n",
+    "    bins=bins,\n",
+    "    legend_name='Number of 311 calls per capita',\n",
+    ").add_to(choropleth_311)\n",
+    "\n",
+    "choropleth_311.save('../output/choropleth_311_per_capita.html')"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- After seeing the map, it does not make sense to normalize 311 calls by capita as some of the census tracts have very small populations (residences), but are still popular for spending time (such as the Charles River)."
    ]
   }
  ],
