choropleth property violations

--- a/spring23-team-1/code/checkpoint_b.ipynb
+++ b/spring23-team-1/code/checkpoint_b.ipynb
@@ -431,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -509,7 +509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -576,7 +576,7 @@
        "4  25025000302              73"
       ]
      },
-     "execution_count": 110,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -907,6 +907,49 @@
    "metadata": {},
    "source": [
     "- After seeing the map, it does not make sense to normalize 311 calls by capita as some of the census tracts have very small populations (residences), but are still popular for spending time (such as the Charles River)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import folium\n",
+    "from folium.plugins import HeatMap\n",
+    "import json\n",
+    "\n",
+    "boston_coordinates = [42.3601, -71.0589]\n",
+    "choropleth_311 = folium.Map(location=boston_coordinates, zoom_start=12)\n",
+    "\n",
+    "# Load GeoJSON data for regions\n",
+    "regions_geojson = json.load(open('../data/Census_2010_Tracts.geojson', 'r'))\n",
+    "\n",
+    "# Data to visualize on the choropleth map (a dictionary with region ID as key and value as the data)\n",
+    "violations_by_geoid = violations.groupby(by=[\"GEOID10\"]).size().reset_index(name=\"NUM_VIOLATIONS\")\n",
+    "\n",
+    "data = {}\n",
+    "for region in regions_geojson[\"features\"]:\n",
+    "    tractce10 = region[\"properties\"][\"GEOID10\"][-6:]\n",
+    "    violationss = violations_by_geoid[violations_by_geoid[\"GEOID10\"] == int(region[\"properties\"][\"GEOID10\"])][\"NUM_VIOLATIONS\"]\n",
+    "    if len(violationss) == 1:\n",
+    "        data[tractce10] = violationss.values[0]\n",
+    "\n",
+    "bins = [0, 10, 25, 50, 100, 150, 200, 250, 300]\n",
+    "\n",
+    "folium.Choropleth(\n",
+    "    geo_data=regions_geojson,\n",
+    "    data=data,\n",
+    "    columns=['TRACTCE10', 'value'],\n",
+    "    key_on='feature.properties.TRACTCE10',\n",
+    "    fill_color='YlOrRd',\n",
+    "    fill_opacity=0.7,\n",
+    "    line_opacity=0.2,\n",
+    "    bins=bins,\n",
+    "    legend_name='Number of Property Violations since 2009',\n",
+    ").add_to(choropleth_311)\n",
+    "\n",
+    "choropleth_311.save('../output/choropleth_property_violations.html')"
    ]
   }
  ],
